101-kittens-carousel-static-website-ec2/cfn.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  This CloudFormation Template was written for running Kittens Carousel Static Website on EC2. 
  Kittens Carousel Static Website will be deployed on Amazon Linux 2023 EC2 Instance with custom 
  security group which allows http connections on port 80 and ssh port 22 from anywhere. Kittens Carousel Static Website
  is downloaded from my Public Github repository, then deployed on Apache Web Server.

Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'
  
Resources:
  MyEC2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      InstanceType: "t2.micro"
      ImageId: !Ref LatestAmiId
      SecurityGroups:
        - !Ref MySecGroup
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo yum update -y
          sudo yum install unzip wget -y
          sudo yum install -y httpd
          sudo systemctl start httpd
          sudo systemctl enable httpd
          cd /tmp/
          wget https://github.com/Demirkol14/KittenProject/archive/refs/heads/main.zip
          unzip main.zip
          cd KittenProject-main/101-kittens-carousel-static-website-ec2/static-web
          sudo mv * /var/www/html/
          cd /tmp/
          rm -rf KittenProject-main main.zip
          sudo systemctl restart httpd

      Tags: 
        - Key: Name
          Value: "deco-kitten-project"
  
  MySecGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Sec group added
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags: 
        - Key: Name
          Value: "deco-secgrp"
Outputs:
  WebSiteURL:
    Description: URL of the deployed website
    Value: !Sub "http://${MyEC2Instance.PublicDnsName}/"
